<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <ImageView
      android:id="@+id/image_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scaleType="fitXY"
      />
  <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_marginStart="53dp"
      android:layout_marginTop="139dp"
      android:background="?attr/widgetBackground"
      android:text="换为白天主题"
      />
  <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/button"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="68dp"
      android:background="?attr/widgetBackground"
      android:text="换为夜间主题"
      />
  <EditText
      android:id="@+id/editText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignStart="@+id/button"
      android:layout_below="@+id/button"
      android:layout_marginTop="57dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="Name"
      android:textColor="?android:attr/textColorPrimary"
      android:textColorHint="?android:attr/textColorSecondary"
      />
  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_marginTop="44dp"
      android:layout_toStartOf="@+id/button2"
      android:text="TextView"
      android:textColor="?android:attr/textColorPrimary"
      />
  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignStart="@+id/textView"
      android:layout_below="@+id/textView"
      android:layout_marginTop="29dp"
      android:text="TextView"
      />


</RelativeLayout>