<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity"
    >

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:background="?attr/themeColorPrimary"
        android:id="@+id/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_height="?attr/actionBarSize"/>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_height="match_parent"/>

    <com.muxistudio.jobs.widget.SelectSearchView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/search_view"
        android:visibility="gone"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_test"
        />

  </FrameLayout>

  <!--<include layout="@layout/view_main_content"/>-->

  <android.support.design.widget.NavigationView
      android:id="@+id/nav_view"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      android:background="?attr/widgetBackground"
      app:headerLayout="@layout/view_header"
      app:itemTextColor="?android:attr/textColorPrimary"
      app:menu="@menu/menu_main"
      />

</android.support.v4.widget.DrawerLayout>
